[gd_scene load_steps=10 format=3 uid="uid://dari3urqap7db"]

[ext_resource type="Script" uid="uid://bf5q0piq01r8i" path="res://main.gd" id="1_7mycd"]
[ext_resource type="PackedScene" uid="uid://bxv1m6f121ouq" path="res://player.tscn" id="2_ybs1s"]
[ext_resource type="PackedScene" uid="uid://b6g35j1nhodem" path="res://map.tscn" id="3_ad2nh"]
[ext_resource type="Script" uid="uid://dn1m482vui8s" path="res://camera_2d.gd" id="3_unc4w"]
[ext_resource type="PackedScene" uid="uid://dxp6esaousgn2" path="res://user_interface.tscn" id="4_5vw27"]
[ext_resource type="PackedScene" uid="uid://ctm54eyu0b5jf" path="res://boat.tscn" id="5_hm6kk"]
[ext_resource type="PackedScene" uid="uid://bd150n0k7527m" path="res://lighthouse.tscn" id="5_ixv4j"]
[ext_resource type="Texture2D" uid="uid://ba6hublqfsgni" path="res://Assets/Art/lightTexutre.png" id="8_4c57u"]
[ext_resource type="Script" uid="uid://boybl16mtxacm" path="res://night.gd" id="9_kek77"]

[node name="Main" type="Node2D"]
script = ExtResource("1_7mycd")

[node name="Map" parent="." instance=ExtResource("3_ad2nh")]
position = Vector2(-272, -168)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-40, -24)
scale = Vector2(1e-05, 1e-05)
zoom = Vector2(3, 3)
script = ExtResource("3_unc4w")

[node name="Lighthouse" parent="." instance=ExtResource("5_ixv4j")]
position = Vector2(560, 200)

[node name="Boat" parent="." instance=ExtResource("5_hm6kk")]
z_index = 1
position = Vector2(24, -24)

[node name="Player" parent="Boat" instance=ExtResource("2_ybs1s")]
z_index = 2
position = Vector2(-64, 8)

[node name="Node2D" type="Node2D" parent="Boat/Player"]

[node name="PointLight2D" type="PointLight2D" parent="Boat/Player"]
position = Vector2(4, -2)
energy = 0.5
texture = ExtResource("8_4c57u")
texture_scale = 0.5

[node name="TestingTiles" type="Node" parent="."]

[node name="ResourceTimer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UserInterface" parent="CanvasLayer" instance=ExtResource("4_5vw27")]

[node name="sun" type="DirectionalLight2D" parent="."]
energy = 0.0
blend_mode = 1
script = ExtResource("9_kek77")

[node name="Day" type="Timer" parent="sun"]
wait_time = 10.0

[node name="Night" type="Timer" parent="sun"]
wait_time = 5.0

[connection signal="inWater" from="Boat" to="Boat/Player" method="_on_boat_in_water"]
[connection signal="timeout" from="ResourceTimer" to="." method="_on_resource_timer_timeout"]
[connection signal="timeout" from="sun/Day" to="sun" method="_on_day_timeout"]
